crates/syntax/tests/snapshots/snapshot__main@empty.toy.snap
---
source: crates/syntax/tests/snapshot.rs
assertion_line: 31
expression: "toy_lang_syntax::ast::parse::file().parse_recovery_verbose(Stream::from_iter(text.len()..text.len(),\n                                                                             tokens))"

---
(
    Some(
        [],
    ),
    [],
)
