crates/syntax/tests/snapshots/snapshot__main@returns.toy.snap
---
source: crates/syntax/tests/snapshot.rs
assertion_line: 31
expression: "toy_lang_syntax::ast::parse::file().parse_recovery_verbose(Stream::from_iter(text.len()..text.len(),\n                                                                             tokens))"

---
(
    Some(
        [
            TopLevel {
                vis: None,
                item: Function(
                    Function {
                        extern_: None,
                        ident: Ident(
                            "return_str",
                        ),
                        generic_params: None,
                        params: [],
                        return_type: Some(
                            Ref(
                                Ident(
                                    Ident(
                                        "str",
                                    ),
                                ),
                            ),
                        ),
                        body: Some(
                            Expr {
                                primary: StrLit(
                                    StrLit(
                                        "\"hello world\"",
                                    ),
                                ),
                                args: None,
                            },
                        ),
                    },
                ),
            },
            TopLevel {
                vis: None,
                item: Function(
                    Function {
                        extern_: None,
                        ident: Ident(
                            "return_num",
                        ),
                        generic_params: None,
                        params: [],
                        return_type: Some(
                            Ident(
                                Ident(
                                    "i8",
                                ),
                            ),
                        ),
                        body: Some(
                            Expr {
                                primary: CodeBlock(
                                    CodeBlock {
                                        statement: [],
                                        expr: Some(
                                            Expr {
                                                primary: NumLit(
                                                    NumLit {
                                                        prefix: None,
                                                        val: 42,
                                                        decimal: None,
                                                        ty: None,
                                                    },
                                                ),
                                                args: None,
                                            },
                                        ),
                                    },
                                ),
                                args: None,
                            },
                        ),
                    },
                ),
            },
        ],
    ),
    [],
)
